# OSU-Driverless-Formula-Student

./: .gitattributes  .gitignore  .gitmodules  README.md  requirements.txt
Instructions/: Camera.md  Lidar.md  README.md  SLAM.md  (+1 more)
ros_ws/src/SEE/see_localization/msg/: package.xml  vehicle_pose_msg.msg
ros_ws/src/see_camera_processing/: CMakeLists.txt  README.md  package.xml  requirements.txt
ros_ws/src/see_camera_processing/include/see_camera_processing/: ConeDetection.hpp  CoordinateExtraction.hpp  ImageCorrection.hpp  SeeCameraProcessing.hpp  synthetic_output_generator.hpp
ros_ws/src/see_camera_processing/install/: install_all.sh  install_dependencies.sh  install_detectron.sh  install_environment.sh  install_ssds.sh
ros_ws/src/see_camera_processing/launch/: cone_detector.launch~  see_camera_processing.launch  see_camera_processing_debug.launch  see_camera_processing_debug_test.launch  see_camera_processing_synthetic.launch
ros_ws/src/see_camera_processing/msg/: Cone.msg  ConeBoxes.msg  ConeColor.msg  ImageCone.msg  ImageCones.msg
ros_ws/src/see_camera_processing/src/: Algorithm.cpp  SeeCameraProcessing.cpp  cone_detection_node.cpp  coordinate_extraction_node.cpp  detector.py.old  detector_ssd.py  image_correction_node.cpp  image_generator.cpp  see_camera_processing_node.cpp  synthetic_output_generator_node.cpp
ros_ws/src/see_camera_processing/src/detectron/: requirements.txt  requirements.txt~
ros_ws/src/see_camera_processing/src/detectron/configs/getting_started/: tutorial_1gpu_e2e_faster_rcnn_R-50-FPN.yaml
ros_ws/src/see_camera_processing/src/detectron/detectron/core/: config.py  config.py~  test.py
ros_ws/src/see_camera_processing/src/detectron/detectron/datasets/: dataset_catalog.py~  dummy_datasets.py
ros_ws/src/see_camera_processing/src/detectron/detectron/modeling/: FPN.py  FPN.py~  ResNet.py  ResNet.py~
ros_ws/src/see_camera_processing/src/detectron/detectron/utils/: blob.py  blob.py~  cython_bbox.c  cython_nms.c  vis.py  vis.py~
ros_ws/src/see_camera_processing/src/detectron/tools/: infer_simple.py
ros_ws/src/see_camera_processing/src/ssds/: Untitled.ipynb  common_commands.help  demo.py  format_locations.txt  nms_locations.txt  print_locations.txt  recent_output.txt  requirements.txt  rfb_output.txt  ssds_train.py  test.py  train.py  train_in_background.sh  validate.py
ros_ws/src/see_camera_processing/src/ssds/experiments/cfgs/: cones_fssd_resnet50_train.yml  cones_fssd_se_tiny_resnet50.yml  cones_fssd_se_tiny_resnet50_train.py  cones_fssd_se_tiny_resnet50_train.yml  cones_fssd_se_tiny_resnet50_train_fast.yml  cones_fssd_spatial_expansion_a_resnet50_train.yml  cones_fssd_spatial_expansion_a_resnet50_train.yml.save  cones_fssd_spatial_expansion_b_resnet50_train.yml  cones_rfb_resnet50_train.yml  cones_rfb_tiny_resnet50_train.yml  cones_ssd512_resnet50_train.yml  cones_ssd_lite_mobilenetv2_train.yml  cones_ssd_resnet50_train.yml  cones_ssd_resnet50_train.yml~  rfb_lite_mobilenetv2_train_voc.yml
ros_ws/src/see_camera_processing/src/ssds/lib/: #ssds_train.py#  .#ssds_train.py  ssds.py  ssds_train.py  ssds_train.py.old  ssds_validation.py.save  ssds_validation.py.save.1  ssds_validation.py.save.2  ssds_validation.py.save.3  train.py
ros_ws/src/see_camera_processing/src/ssds/lib/dataset/: coco.py  cones.py  dataset_factory.py  voc.py  voc_eval.py
ros_ws/src/see_camera_processing/src/ssds/lib/modeling/: #model_builder.py#  model_builder.py
ros_ws/src/see_camera_processing/src/ssds/lib/utils/: box_utils.py  config_parse.py  dark2pth.py  data_augment.py  data_augment_test.py  eval_utils.py  fp16_utils.py  model_logging.py  model_logging.py~  nms.pyx  timer.py  visualize_utils.py
ros_ws/src/see_ego_motion/: .gitignore  CMakeLists.txt  package.xml
ros_ws/src/see_ego_motion/include/see_ego_motion/: SeeEgoMotion.hpp
ros_ws/src/see_ego_motion/include/see_ego_motion/testing/: SeeEgoMotionTest.hpp
ros_ws/src/see_ego_motion/launch/: see_ego_motion.launch  see_ego_motion_with_test.launch
ros_ws/src/see_ego_motion/msg/: Dynamics.msg  Error.msg  OdomDeltas.msg  see_ego_motion_interface.msg
ros_ws/src/see_ego_motion/src/: Algorithm.cpp  OdometryNode.py  SeeEgoMotion.cpp  filterTester.py  install.bash  see_ego_motion_node.cpp
ros_ws/src/see_ego_motion/src/MotionModels/: CTRV.py  motionModelInterface.py
ros_ws/src/see_ego_motion/src/ParticleFilter/: Particle.py  ParticleFilter.py
ros_ws/src/see_ego_motion/src/testing/: SeeEgoMotionTest.cpp  bagTranslator.py  see_ego_motion_test_node.cpp
ros_ws/src/see_lidar_processing/: CMakeLists.txt  README.md  package.xml
ros_ws/src/see_lidar_processing/config/: config.yaml
ros_ws/src/see_lidar_processing/include/see_lidar_processing/: SeeLidarConeDetector.hpp  SeeLidarPointcloudClusterer.hpp  SeeLidarPointcloudPrefilter.hpp
ros_ws/src/see_lidar_processing/launch/: see_lidar_processing.launch
ros_ws/src/see_lidar_processing/msg/: Cone.msg  ConeColor.msg  ConeContainer.msg  CovarianceMatrix.msg
ros_ws/src/see_lidar_processing/src/: SeeLidarConeDetector.cpp  SeeLidarConeIdentificator.cpp  SeeLidarPointcloudClusterer.cpp  SeeLidarPointcloudPrefilter.cpp  see_lidar_processing_node.cpp
ros_ws/src/see_localization/: CMakeLists.txt  README.md
ros_ws/src/see_localization/include/see_localization/: Algorithm.hpp  Cone.hpp  DataGenerator.hpp  GlobalPose.hpp  LandmarkEstimate.hpp  Map.hpp  Particle.hpp  SLAMmath.hpp  SeeLocalization.hpp  Sensor.hpp
ros_ws/src/see_localization/include/see_localization/old_classes/: coneMap.hpp
ros_ws/src/see_localization/launch/: see_localization.launch
ros_ws/src/see_localization/matlab_gen/jar/: msg-0.1.0.md5
ros_ws/src/see_localization/msg/: SLAM_cone_msg.msg  world_map_msg.msg
ros_ws/src/see_localization/scripts/: EKF_Localization.py  publish_to_rviz.py  sample_data.py
ros_ws/src/see_localization/src/: Algorithm.cpp  Cone.cpp  Particle.cpp  SLAM.cpp  SLAMmath.cpp  Sensor.cpp  monte_carlo_localization_functions.cpp  sample_data_node.cpp  see_localization_node.cpp  skidpad.cpp
ros_ws/src/see_localization/src/Data/: carLocation.txt  coneLocation.txt
(+81 files in other folders)
