<?xml version="1.0"?>
<package format="2">
  <name>see_camera_processing</name>
  <version>0.1.0</version>
  <description>GFR driverless see_camera_processing</description>
  <maintainer email="lukas.wippermann@global-formula-racing.com">Lukas Wippermann</maintainer>
  <license>todo</license>
  <author email="lukas.wippermann@global-formula-racing.com">Lukas Wippermann</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <build_depend>cv_bridge</build_depend>
  <exec_depend>cv_bridge</exec_depend>
</package>
